# genode

./: .gitignore  abi_symbols_qt5  addr_to_sym  assert.diff  backtrace  base.diff  binutils_debug.patch  create_qt5_symbol_files  dcss_common.patch  dcss_ctxld.patch  debug.diff  ec_ctrl.diff  ec_ctrl2.diff  efer.diff  filter_addresses_from_log  filter_addresses_from_log.sh  filter_log.sh  gcc_path.diff  gdb-7.7.1.diff  gdbserver_debug.diff  gdbserver_linux_debug.diff  generate_statistics  generate_statistics.sh  get_addresses_from_log.sh  hid-core.c  imx8_fb_drm.patch  imx_drm_core.patch  internal_abi.list  issue2379.patch  issue2380.patch  issue2390.patch  libasan.patch  libgcov_libc_symbols.txt  libubsan.patch  libubsan_no_libc.patch  linux_fb.patch  msr.diff  muen_dbgserver.diff  muen_debug.diff  muen_debug_buffers.diff  (+34 more)
base-foc/: Makefile
base-foc/config/: arndale.kernel  (+4 more)
base-nova/: Makefile
doc/: news.txt  release_notes-12-08.txt  release_notes-13-08.txt  release_notes-15-05.txt  virtualbox_setup.txt
libports/: lwip_contrib_debug.diff  lwip_contrib_sem_debug.diff
linux_test/: Makefile  generate_html.sh  main.c
pthread-test/: Makefile  pthread.cc  syscall.cc
qt5/: Makefile  README  jstest.html
repos/libports/src/test/qt5/qpluginwidget/: CMakeLists.txt  main.cpp  target.mk
repos/libports/src/test/qt5/qt_quick/: CMakeLists.txt  main.cpp  qt_quick.pro  qt_quick.qml  target.mk
tool/: abi_symbols  autopilot.list  create_builddir  libgcc_libc_stub.h  link.h  run  tool_chain  tool_chain_gcc_patches.inc  tool_chain_gdb_patches.inc  tool_chain_qt5
(+4016 files in other folders)
